test/Programs/InvalidTests/dupMatch/dupMatch.fst
f : &{A: Int} -> Int
f c =
  match c with {
    A x -> x; 
    A x -> x
  }
